--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ span {
 }
 main {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
-  color: #777777;
+  color: #4aaaa5;
   width: 960px;
   height: 700px;
   background: #ffffff;
@@ -65,6 +65,12 @@ main {
   border-color: #4aaaa5;
   border-radius: 30px;
   margin: 50px 200px 100px 200px;
+}
+p {
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  color: #777777;
+  font-size: 14pt;
+  padding-left: 20px;
 }
 
 button {
@@ -78,10 +84,18 @@ button {
 button:hover {
   color: #ffce6e;
 }
+#images {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
 
+.rows {
+  grid-column: 2;
+  grid-row: 4;
+}
 img {
-  width: 200px;
-  height: 200px;
-  float: left;
-  padding: 20px 0px 0px 0px;
+  width: 250px;
+  padding: 0px 20px 20px 20px;
 }
