--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ span {
 main {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   color: #4aaaa5;
-  width: 960px;
+  width: 70%;
 
   background: #ffffff;
   padding: 10px 50px 50px 50px;
@@ -111,26 +111,45 @@ form {
 }
 
 img {
-  width: 273px;
+  width: 100%;
   padding: 20px 20px 20px 3px;
 }
-/* ---------RESPONSIVE---------- */
-@media screen and (max-width: 768px) {
+/* ---------RESPONSIVE MEDIA QUERY TABLET ---------- */
+@media only screen and (max-device-width: 800px) {
+  header {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 100px;
+  }
   nav {
-    align-content: center;
+    font-size: 40px;
+    float: none;
+    text-align: center;
+    padding-top: 30px;
+  }
+  li {
+    display: inline;
+    padding: 0px 15px 0px 15px;
+    border-right: 1px solid #dddddd;
   }
   main {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
   }
-  button {
-    border-radius: 12px;
-    padding: 10px 18px;
-    background-color: white;
-    color: #4aaaa5;
-    font-size: 12pt;
-    margin: 5px;
+  h1 {
+    text-align: center;
+    font-size: 80pt;
+    padding: 20px;
+  }
+  form {
+    padding: 30px;
+    margin: 30px 0px;
+  }
+  #user-input {
+    padding: 10px;
+    margin: 20px 0px;
   }
   #images {
     display: grid;
@@ -139,12 +158,31 @@ img {
     grid-auto-rows: minmax(100px, auto);
     padding-top: 20px;
   }
+
   img {
-    width: 245px;
+    width: 100%;
     padding: 20px 20px 20px 3px;
   }
-}
-/* MEDIA QUERY TABLET */
+  p {
+    font-size: 24pt;
+  }
+  button {
+    font-size: 24pt;
+    margin: 10px;
+  }
+  #add-user {
+    padding: 15px 24px;
+    font-size: 24pt;
+    margin: 5px;
+  }
+  #user-input {
+    padding: 15px;
+    margin: 20px;
+    font-size: 24pt;
+  }
+  label {
+    font-size: 24pt;
+  }
 /* MEDIA QUERY MOBILE */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   header {
@@ -175,23 +213,43 @@ img {
     padding: 20px;
   }
   form {
-    padding: 10px;
-    margin: 10px 0px;
+    padding: 30px;
+    margin: 30px 0px;
   }
   #user-input {
-    padding: 5px;
-    margin: 10px 0px;
+    padding: 10px;
+    margin: 20px 0px;
   }
   #images {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
     padding-top: 20px;
   }
 
   img {
-    width: 273px;
+    width: 100%;
     padding: 20px 20px 20px 3px;
+  }
+  p {
+    font-size: 34pt;
+  }
+  button {
+    font-size: 30pt;
+    margin: 10px;
+  }
+  #add-user {
+    padding: 15px 30px;
+    font-size: 30pt;
+    margin: 5px;
+  }
+  #user-input {
+    padding: 25px;
+    margin: 20px;
+    font-size: 30pt;
+  }
+  label {
+    font-size: 30pt;
   }
 }
